--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,51 +1,13 @@
-version: "3.7"
+version: '3'
 services:
-  go:
-    container_name: "todo_api"
-    build:
-      context: .
-      dockerfile: ./docker/go/dockerfile
-    stdin_open: true
-    tty: true
-    volumes:
-      - .:/app
-    ports:
-      - 8080:8080
-    depends_on:
-      - "db"
   db:
-    container_name: "todo_db"
     platform: linux/x86_64
-    build:
-      context: .
-      dockerfile: ./docker/db/dockerfile
-    networks:
-      - default
-    restart: always
+    image: mysql:8.0.21
     ports:
-      - 3306:3306
-    environment:
-      MYSQL_RANDOM_ROOT_PASSWORD: "secret"
-      MYSQL_DATABASE: "test"
-      MYSQL_USER: "tester"
-      MYSQL_PASSWORD: "secret"
-      # OR if you want to use "root" as the user, just these two lines
-      # MYSQL_ROOT_PASSWORD: ${DATABASE_PASSWORD}
-      # MYSQL_DATABASE: ${DATABASE_NAME}
-
-      # we mount a data volume to make sure we don't lose data
-    volumes:
-      - mysql_data:/var/lib/mysql
+      - '3306:3306'
     command: --default-authentication-plugin=mysql_native_password
-  node:
-    build:
-      context: .
-      dockerfile: ./docker/node/dockerfile
-    stdin_open: true
-    tty: true
-    volumes:
-      - .:/work
-networks:
-  default:
-volumes:
-  mysql_data:
+    environment:
+      MYSQL_USER: 'user'
+      MYSQL_PASSWORD: 'pass'
+      MYSQL_ROOT_PASSWORD: 'pass'
+      MYSQL_DATABASE: 'test'
